--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<meta charset="utf-8">
-<br><br>
-<center><h1>Tezliklə gəlirik</h1></center>
+<!DOCTYPE>
+<html lang="az">
+<head>
+	<title>CS-BEL</title>
+	<meta charset="utf-8">
+</head>
+<body>
+	<br><br>
+	<center><h1>Tezliklə gəlirik</h1></center>
+</body>
+</html>
