website for belcs is ready

--- a/index.html
+++ b/index.html
@@ -3,9 +3,88 @@
 <head>
 	<title>CS-BEL</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<br><br>
-	<center><h1>Tezliklə gəlirik</h1></center>
+	<div class="content">
+		<div class="header">
+			<h3>Bakı Avropa Liseyi - Programlaşdırma Kursu</h3>
+		</div>
+		<hr>
+		<div class="main">
+			<p><strong>Kurs haqqında</strong><br>
+			Kurs ADA Universitetinin Azərbaycan Respublikası Təhsil Nazirliyi ilə əməkdaşlığı nəticəsində ərsəyə gəlmişdir. Məqsəd orta məktəb şagirdlərinə programlaşdırma dillərinin və alqoritmlərin mənimsədilməsi və onların beynəlxalq yarışlarda iştirakına kömək etməkdir. Kurs müddətində şagirdlər Java və ya C++ dillərində sərbəst şəkildə alqoritm yazmağı, proqramlaşdırma dillərinin sirrlərini, kompleks problemlərin həlli yollarını öyrənəcəklər.
+			</p>
+
+			<p><strong>Təlimçilər</strong><br>
+				<ul style="list-style-type: none">
+					<li><strong><a href="https://www.linkedin.com/in/chingizhuseynzade">Çingiz Hüseynzade</a> (chingiz.h@gmail.com)</strong>
+						<ul style="list-style-type: none">
+							<li>ADA Universitetinin "Kompyuter Elmləri" fakültəsində bakalavr təhsili alır(2013-2018). Maraq sahiləri Mobile Development və Web Development. Boş vaxtlarında comptetive programlaşdırma ilə məşğul olur. Bir sıra mobil programların hazırlanması ilə məşğuldur. Ətraflı məlumat: <a href="http://chlabs.net">chlabs.net</a></li>
+						</ul>
+					</li>
+					<br>
+					<li><strong><a href="https://www.linkedin.com/in/zsadigov">Ziyəddin Sadıqov</a> (ziyaddinsadigov@gmail.com)</strong>
+						<ul style="list-style-type: none">
+							<li>2014-cü ildə Bakı Avropa Liseyini bitirib. Hal-hazırda ADA Universitetinin "Kompyuter Elmləri” fakültəsində bakalavr təhsili alır (2014 - 2018). Maraq sahələri Web, Mobile, Competitive Programming.</li>
+						</ul>
+					</li>
+				</ul>
+			</p>
+
+			<hr>
+
+			<p>
+				<strong>Kursda istifadə etdiyimiz proqram</strong><br>
+				Kursda istifadə etdiyimiz DrJava proqramını rəsmi saytından (<a href="http://drjava.org">http://drjava.org</a>) əldə edə bilərsiniz.
+			</p>
+
+			<hr>
+			
+			<p>
+				<strong>Tapşırıq 0</strong> (Bu tapşırığın əsas məqsədi sizdə ilkin proqramlaşdırma və online tapşırıq təhvil vermə bacarıqlarını formalaşdırmaqdır.)<br><br>
+				<strong>Proqramlaşdırma</strong>
+				<h6>Sizin tapşırığınız, dərsdə əldə etdiyiniz biliklərdən istifadə edərək növbəti proqramları yazmaqdır.</h6>
+				<br><br>
+
+				<i>1. Daxil edilən arqumentlər.  Daxil edilən 4 adı oxuyan Salam.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş adları tərs ardıcıllıqla yazıb onları salamlamalıdır. Nümunə aşağıda:</i><br><br>
+				<kbd>% run Salam Agasif Vasif Asif Ali</kbd><br><br>
+				Salam Ali, Asif, Vasif ve Agasif.<br><br>
+
+				<hr>
+
+				<i>2. Integer dəyişənləri.  Daxil edilən 3 ədədi oxuyan Cem.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş rəqəmlərin cəmini göstərməlidir. Nümunə aşağıda:</i><br><br>
+				<kbd>% java Cem 2 5 8</kbd><br><br>
+				2 + 5 + 8 = 15<br><br>
+
+				<hr>
+
+				<i>3. Teref. Daxil edilən a və b ədədini oxuyan Teref.java proqramı yazın. a ədədi düzbucaqlının enini, b ədədi isə düzbucaqlının uzunluğunu göstərir. Proqram cavab olaraq, düzbucaqlının perimetrini və sahəsini göstərməlidir. Nümunə aşağıda:</i><br><br>
+				<kbd>% run Teref 2 6</kbd><br><br>
+				Perimetr: 16<br><br>
+				Sahe: 12<br><br>
+
+				<hr>
+
+				<i>4. Sadə məsələ. Proqram ikirəqəmli ədədi oxuyur və ədədin hər bir rəqəmini arada boşluq olmaqla ekrana verir. Nümunə aşağıda:</i><br><br>
+				<kbd>% run Sade 23</kbd><br><br>
+				2 3<br><br>
+			</p>
+
+			<p>
+				<strong>Tapşırığın göndərilməsi</strong><br><br>
+				1) Dropboxda yaratdığımız folderin içində “homework 0” folderi yaradın.<br>
+				2) Yazdığınız üç Java faylını (Salam.java, Cem.java, Teref.java, Sade.java) “homework 0” folderinin içinə atın.
+			</p>
+
+			<hr>
+
+			<p>
+				<strong>Yardım</strong><br><br>
+				Əgər tapşırıqla bağlı nəsə aydın olmasa, sualınız olsa, həll etməyə çətinlik çəksəniz, chingiz.h@gmail.com və ya ziyaddinsadigov@gmail.com –a sualınızı yazıb göndərin.
+		</div>
+		<div class="footer"></div>
+	</div>
 </body>
 </html>
