--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<hr>
 
 				<i>2. Integer dəyişənləri.  Daxil edilən 3 ədədi oxuyan Cem.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş rəqəmlərin cəmini göstərməlidir. Nümunə aşağıda:</i><br><br>
-				<kbd>% java Cem 2 5 8</kbd><br><br>
+				<kbd>% run Cem 2 5 8</kbd><br><br>
 				2 + 5 + 8 = 15<br><br>
 
 				<hr>
