--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 				<strong>Tapşırıq 0</strong> (Bu tapşırığın əsas məqsədi sizdə ilkin proqramlaşdırma və online tapşırıq təhvil vermə bacarıqlarını formalaşdırmaqdır.)<br><br>
 				<strong>Proqramlaşdırma</strong>
 				<h6>Sizin tapşırığınız, dərsdə əldə etdiyiniz biliklərdən istifadə edərək növbəti proqramları yazmaqdır.</h6>
-				<br><br>
+				<br>
+				Qeyd: Dərslik kimi <a href="http://introcs.cs.princeton.edu/java/11hello/" title="" style="">Section 1.1</a> və <a href="http://introcs.cs.princeton.edu/java/12types/" title="" style="">Section 1.2</a> oxuya bilərsiniz.
+				<br>
 
 				<i>1. Daxil edilən arqumentlər.  Daxil edilən 4 adı oxuyan Salam.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş adları tərs ardıcıllıqla yazıb onları salamlamalıdır. Nümunə aşağıda:</i><br><br>
 				<kbd>% run Salam Agasif Vasif Asif Ali</kbd><br><br>
