--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				<strong>Proqramlaşdırma</strong>
 				<h6>Sizin tapşırığınız, dərsdə əldə etdiyiniz biliklərdən istifadə edərək növbəti proqramları yazmaqdır.</h6>
 				<br>
-				Qeyd: Dərslik kimi <a href="http://introcs.cs.princeton.edu/java/11hello/" title="" style="">Section 1.1</a> və <a href="http://introcs.cs.princeton.edu/java/12types/" title="" style="">Section 1.2</a> oxuya bilərsiniz.
-				<br>
+				<b></b>Qeyd: Dərslik kimi <a href="http://introcs.cs.princeton.edu/java/11hello/" title="" style="">Section 1.1</a> və <a href="http://introcs.cs.princeton.edu/java/12types/" title="" style="">Section 1.2</a> oxuya bilərsiniz.</b>
+				<br><br>
 
 				<i>1. Daxil edilən arqumentlər.  Daxil edilən 4 adı oxuyan Salam.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş adları tərs ardıcıllıqla yazıb onları salamlamalıdır. Nümunə aşağıda:</i><br><br>
 				<kbd>% run Salam Agasif Vasif Asif Ali</kbd><br><br>
@@ -77,7 +77,7 @@
 			<p>
 				<strong>Tapşırığın göndərilməsi</strong><br><br>
 				1) Dropboxda yaratdığımız folderin içində “homework 0” folderi yaradın.<br>
-				2) Yazdığınız üç Java faylını (Salam.java, Cem.java, Teref.java, Sade.java) “homework 0” folderinin içinə atın.
+				2) Yazdığınız dörd Java faylını (Salam.java, Cem.java, Teref.java, Sade.java) “homework 0” folderinin içinə atın.
 			</p>
 
 			<hr>
