new index, assignment pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul style="list-style-type: none">
 					<li><strong><a href="https://www.linkedin.com/in/chingizhuseynzade">Çingiz Hüseynzade</a> (chingiz.h@gmail.com)</strong>
 						<ul style="list-style-type: none">
-							<li>ADA Universitetinin "Kompyuter Elmləri" fakültəsində bakalavr təhsili alır(2013-2018). Maraq sahiləri Mobile Development və Web Development. Boş vaxtlarında comptetive programlaşdırma ilə məşğul olur. Bir sıra mobil programların hazırlanması ilə məşğuldur. Ətraflı məlumat: <a href="http://chlabs.net">chlabs.net</a></li>
+							<li>ADA Universitetinin "Kompyuter Elmləri" fakültəsində bakalavr təhsili alır(2013-2018). Maraq sahələri Mobile Development və Web Development. Boş vaxtlarında competitive programlaşdırma ilə məşğul olur. Bir sıra mobil programların hazırlanması ilə məşğuldur. Ətraflı məlumat: <a href="http://chlabs.net">chlabs.net</a></li>
 						</ul>
 					</li>
 					<br>
@@ -43,36 +43,16 @@
 			<hr>
 			
 			<p>
-				<strong>Tapşırıq 0</strong> (Bu tapşırığın əsas məqsədi sizdə ilkin proqramlaşdırma və online tapşırıq təhvil vermə bacarıqlarını formalaşdırmaqdır.)<br><br>
-				<strong>Proqramlaşdırma</strong>
-				<h6>Sizin tapşırığınız, dərsdə əldə etdiyiniz biliklərdən istifadə edərək növbəti proqramları yazmaqdır.</h6>
-				<br>
-				<b>Qeyd: Dərslik kimi <a href="http://introcs.cs.princeton.edu/java/11hello/" title="" style="">Section 1.1</a> və <a href="http://introcs.cs.princeton.edu/java/12types/" title="" style="">Section 1.2</a> oxuya bilərsiniz.</b>
-				<br><br>
-
-				<i>1. Daxil edilən arqumentlər.  Daxil edilən 4 adı oxuyan Salam.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş adları tərs ardıcıllıqla yazıb onları salamlamalıdır. Nümunə aşağıda:</i><br><br>
-				<kbd>% run Salam Agasif Vasif Asif Ali</kbd><br><br>
-				Salam Ali, Asif, Vasif ve Agasif.<br><br>
-
-				<hr>
-
-				<i>2. Integer dəyişənləri.  Daxil edilən 3 ədədi oxuyan Cem.java proqramı yazın. Proqram cavab olaraq, daxil edilmiş rəqəmlərin cəmini göstərməlidir. Nümunə aşağıda:</i><br><br>
-				<kbd>% run Cem 2 5 8</kbd><br><br>
-				2 + 5 + 8 = 15<br><br>
-
-				<hr>
-
-				<i>3. Teref. Daxil edilən a və b ədədini oxuyan Teref.java proqramı yazın. a ədədi düzbucaqlının enini, b ədədi isə düzbucaqlının uzunluğunu göstərir. Proqram cavab olaraq, düzbucaqlının perimetrini və sahəsini göstərməlidir. Nümunə aşağıda:</i><br><br>
-				<kbd>% run Teref 2 6</kbd><br><br>
-				Perimetr: 16<br><br>
-				Sahe: 12<br><br>
-
-				<hr>
-
-				<i>4. Sadə məsələ. Proqram ikirəqəmli ədədi oxuyur və ədədin hər bir rəqəmini arada boşluq olmaqla ekrana verir. Nümunə aşağıda:</i><br><br>
-				<kbd>% run Sade 23</kbd><br><br>
-				2 3<br><br>
+				<strong>Tapşırıqlar</strong>
+				
+				<ul style="list-style-type: none; font-weight: bold;">
+					<li><a href="assignnment0.html">Tapşırıq 0</a> - <a href="https://www.dropbox.com/sh/hw8zjc0e9kcnmaz/AAAKH5BojOxC2CEn-DUWmQQEa?dl=0">Həlləri</a></li>
+					<li><a href="assignment1.html">Tapşırıq 1</a></li>
+				</ul>
+				
 			</p>
+
+			<hr>
 
 			<p>
 				<strong>Tapşırığın göndərilməsi</strong><br><br>
