--- a/assignment1.html
+++ b/assignment1.html
@@ -35,7 +35,7 @@
 
 				<hr>
 
-				<i>2. Fesil. Daxil edilmiş ədəddən fəsilin adını çıxarın. Proqram cavab olaraq, daxil edilmiş ədədə uyğun olaraq fəsilin adını çıxarmalıdır. Nümunə aşağıda:</i><br><br>
+				<i>2. Fesil. Daxil edilmiş ədəddən - ilin hər hansı ayının sıra nömrəsindən fəsilin adını çıxarın. Proqram cavab olaraq, daxil edilmiş ədədə uyğun olaraq fəsilin adını çıxarmalıdır. Nümunə aşağıda:</i><br><br>
 				<kbd>% run Fesil 5</kbd><br><br>
 				Yaz<br><br>
 
