--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<strong>Tapşırıqlar</strong>
 				
 				<ul style="list-style-type: none; font-weight: bold;">
-					<li><a href="assignnment0.html">Tapşırıq 0</a> - <a href="https://www.dropbox.com/sh/hw8zjc0e9kcnmaz/AAAKH5BojOxC2CEn-DUWmQQEa?dl=0">Həlləri</a></li>
+					<li><a href="assignment0.html">Tapşırıq 0</a> - <a href="https://www.dropbox.com/sh/hw8zjc0e9kcnmaz/AAAKH5BojOxC2CEn-DUWmQQEa?dl=0">Həlləri</a></li>
 					<li><a href="assignment1.html">Tapşırıq 1</a></li>
 				</ul>
 				
