--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="content">
 		<div class="header">
-			<h3>Bakı Avropa Liseyi - Programlaşdırma Kursu</h3>
+			<h3><a href="http://belcs.github.io">Bakı Avropa Liseyi - Programlaşdırma Kursu</a></h3>
 		</div>
 		<hr>
 		<div class="main">
