--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<p><strong>Təlimçilər</strong><br>
 				<ul style="list-style-type: none">
-					<li><strong><a href="https://www.linkedin.com/in/chingizhuseynzade">Çingiz Hüseynzade</a> (chingiz.h@gmail.com)</strong>
+					<li><strong><a href="https://www.linkedin.com/in/chingizhuseynzade">Çingiz Hüseynzadə</a> (chingiz.h@gmail.com)</strong>
 						<ul style="list-style-type: none">
 							<li>ADA Universitetinin "Kompyuter Elmləri" fakültəsində bakalavr təhsili alır(2013-2018). Maraq sahələri Mobile Development və Web Development. Boş vaxtlarında competitive programlaşdırma ilə məşğul olur. Bir sıra mobil programların hazırlanması ilə məşğuldur. Ətraflı məlumat: <a href="http://chlabs.net">chlabs.net</a></li>
 						</ul>
