--- a/assignment1.html
+++ b/assignment1.html
@@ -54,7 +54,7 @@
 				<hr>
 
 				<i>5. Neçə yaşım var?. Daxil edilmiş 3 ayrı ədədi istifadəçinin doğum tarixi kimi yadda saxla. Daha sonra isə istifadəçinin doğum tarixini və onun neçə yaşı olduğunu cavab olaraq yaz. Nümunə aşağıda:</i><br><br>
-				<kbd>% run NeceYashimVar 1995 9 1</kbd><br><br>
+				<kbd>% run Yash 1995 9 1</kbd><br><br>
 				Dogum tarixin: 1 Sentyabr, 1995<br>
 				Senin 20 yashin var.
 				<br><br>
@@ -89,7 +89,7 @@
 			<p>
 				<strong>Tapşırığın göndərilməsi</strong><br><br>
 				1) Dropboxda yaratdığımız folderin içində “homework 1” folderi yaradın.<br>
-				2) Yazdığınız dörd Java faylını (Salam.java, Cem.java, Teref.java, Sade.java) “homework 0” folderinin içinə atın.
+				2) Yazdığınız dörd Java faylını (CutYoxsaTek.java, Fesil.java, Tekrarla.java, ChetinMesele.java, Yash.java, Ulduzlar.java, Ulduzlar2.java) “homework 0” folderinin içinə atın.
 			</p>
 
 			<hr>
