--- a/assignment1.html
+++ b/assignment1.html
@@ -61,7 +61,7 @@
 
 				<hr>
 
-				<i>6. Ulduzlar. Nümunədəki kimi ulduzları çıxarmaq üçün program yazın.</i><br><br>
+				<i>6. Ulduzlar. Program 7 ulduzdan 1 ulduza qədər alt-alta ulduz (*) işarəsini düzməlidir. Nümunədəki kimi ulduzları çıxarmaq üçün program yazın.</i><br><br>
 				<kbd>% run Ulduzlar</kbd><br><br>
 				*******<br>
 				******<br>
@@ -74,7 +74,7 @@
 
 				<hr>
 
-				<i>7. Ulduzlar2. Program ədədlərlə yanaşı ulduzlar çıxarmalıdır. Nümunə aşağıda:</i><br><br>
+				<i>7. Ulduzlar2. Program Ulduzlar məsələsindəki programa əlavə olaraq, ədədlərlə yanaşı ulduzlar çıxarmalıdır. Nümunə aşağıda:</i><br><br>
 				<kbd>% run Ulduzlar2</kbd><br><br>
 				1******<br>
 				12*****<br>
