--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				
 				<ul style="list-style-type: none; font-weight: bold;">
 					<li><a href="assignment0.html">Tapşırıq 0</a> - <a href="https://www.dropbox.com/sh/hw8zjc0e9kcnmaz/AAAKH5BojOxC2CEn-DUWmQQEa?dl=0">Həlləri</a></li>
-					<li><a href="assignment1.html">Tapşırıq 1</a></li>
+					<li><a href="assignment1.html">Tapşırıq 1</a> - <a href="https://www.dropbox.com/sh/rz2rypecfm0go4i/AADmwGGINZBzYW7mD2x-pikxa?dl=0">Həlləri</a></li>
 				</ul>
 				
 			</p>
