--- a/assignment2.html
+++ b/assignment2.html
@@ -26,12 +26,9 @@
 				<h6>Sizin tapşırığınız, dərsdə əldə etdiyiniz biliklərdən istifadə edərək növbəti proqramları yazmaqdır.</h6>
 				<br>
 
-				<i>1. Ədədin cüt və ya tək olması.  Daxil edilən ədədin cüt və ya tək olmasını tapan program yazın. Program cavab olaraq "args[0] cüt ədəddir" və ya "args[0] cüt ədəddir" göstərməlidir. Nümunə aşağıda:</i><br><br>
-				<kbd>% run CutYoxsaTek 5</kbd><br><br>
-				5 tek ededdir.<br><br>
-
-				<kbd>% run CutYoxsaTek 18</kbd><br><br>
-				18 cut ededdir.<br><br>
+				<i>1. Tərsinə silsilə. int tipində array yaradın. Arrayın içini 1-dən başlayaraq 100-ə qədər ədədlərlə doldurun. Bunun üçün sizə 100 xana lazım olacaq. Sonra həmin ədədləri tərsinə sıra ilə ekrana çıxarın (100-dən 1-ə qədər). Arraya doldurmaq və arraydan ekrana çıxarmaq üçün sizə for loop lazım olacaq.</i><br><br>
+				<kbd>% run TersineSilsile</kbd><br><br>
+				100 99 98 97 96 95 94 93 ......... 4 3 2 1<br><br>
 
 				<hr>
 
