--- a/assignment0.html
+++ b/assignment0.html
@@ -50,12 +50,21 @@
 				<i>4. Sadə məsələ. Proqram ikirəqəmli ədədi oxuyur və ədədin hər bir rəqəmini arada boşluq olmaqla ekrana verir. Nümunə aşağıda:</i><br><br>
 				<kbd>% run Sade 23</kbd><br><br>
 				2 3<br><br>
+
+				<hr>
+
+				<i>5. Calculator. Proqram iki ədəd oxuyur və toplama, çıxma, vurma, bölmə əməllərini yerinə yetirir. Nümunə aşağıda:</i><br><br>
+				<kbd>% run Calculator 23 48</kbd><br><br>
+				Toplama: 71<br><br>
+				Chixma: -25<br><br>
+				Vurma: 1104<br><br>
+				Bolme: 0,479166667<br><br>
 			</p>
 
 			<p>
 				<strong>Tapşırığın göndərilməsi</strong><br><br>
-				1) Dropboxda yaratdığımız folderin içində “homework 0” folderi yaradın.<br>
-				2) Yazdığınız dörd Java faylını (Salam.java, Cem.java, Teref.java, Sade.java) “homework 0” folderinin içinə atın.
+				1) Dropboxda yaratdığımız folderin içində “hw0” folderi yaradın.<br>
+				2) Yazdığınız beş Java faylını (Salam.java, Cem.java, Teref.java, Sade.java, Calculator.java) “hw0” folderinin içinə atın.
 			</p>
 
 			<hr>
