add extra tasks to hw0

--- a/assignment0.html
+++ b/assignment0.html
@@ -59,12 +59,30 @@
 				Chixma: -25<br><br>
 				Vurma: 1104<br><br>
 				Bolme: 0,479166667<br><br>
+				
+				<hr>
+
+				<i>6. Sadə məsələ - 2. Proqram üçrəqəmli ədədi oxuyur və ədədin hər bir rəqəmini arada boşluq olmaqla ekrana verir. <b>Bu məsələni hər iki üsulla etməyə çalışın (String kimi - Sade2_String.java və int kimi - Sade2_int.java).</b>  Nümunə aşağıda:</i><br><br>
+				<kbd>% run Sade2_String 234</kbd><br><br>
+				2 3 4<br><br>
+
+				<kbd>% run Sade2_int 961</kbd><br><br>
+				9 6 1<br><br>
+
+				<hr>
+
+				<i>7. Telephone. Proqram XXX-XXX-XX-XX formasında olan mobil telefon nömrəsini oxuyur və alt-alta 4 nömrə blokunu (XXX, XXX, XX, XX) ekrana yazır. Bu məsələni həll etmək üçün String tipindən istifadə edə bilərsiniz. Yadınıza salın, String-lərdən söz parçalarını ayırmaq üçün hansı String funksiyasından istifadə edirdik. Nümunə aşağıda:</i><br><br>
+				<kbd>% run Telephone 055-633-33-15</kbd><br><br>
+				055<br><br>
+				633<br><br>
+				33<br><br>
+				15<br><br>
 			</p>
 
 			<p>
 				<strong>Tapşırığın göndərilməsi</strong><br><br>
 				1) Dropboxda yaratdığımız folderin içində “hw0” folderi yaradın.<br>
-				2) Yazdığınız beş Java faylını (Salam.java, Cem.java, Teref.java, Sade.java, Calculator.java) “hw0” folderinin içinə atın.
+				2) Yazdığınız səkkiz Java faylını (Salam.java, Cem.java, Teref.java, Sade.java, Calculator.java, Sade2_String.java, Sade2_int.java, Telephone.java) “hw0” folderinin içinə atın.
 			</p>
 
 			<hr>
