--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 			<p><strong>Təlimçilər</strong><br>
 				<ul style="list-style-type: none">
-					<li><strong><a href="https://www.linkedin.com/in/chingizhuseynzade">Çingiz Hüseynzadə</a> (chingiz.h@gmail.com)</strong>
+					<li><strong><a href="https://www.linkedin.com/in/chingizhuseynzade">Çingiz Hüseynzadə</a></strong>
 						<ul style="list-style-type: none">
 							<li>ADA Universitetinin "Kompyuter Elmləri" fakültəsində bakalavr təhsili alır(2013-2018). Maraq sahələri Mobile Development və Web Development. Boş vaxtlarında competitive programlaşdırma ilə məşğul olur. Bir sıra mobil programların hazırlanması ilə məşğuldur. Ətraflı məlumat: <a href="http://chlabs.net">chlabs.net</a></li>
 						</ul>
 					</li>
 					<br>
-					<li><strong><a href="https://www.linkedin.com/in/zsadigov">Ziyəddin Sadıqov</a> (ziyaddinsadigov@gmail.com)</strong>
+					<li><strong><a href="https://www.linkedin.com/in/zsadigov">Ziyəddin Sadıqov</a></strong>
 						<ul style="list-style-type: none">
 							<li>2014-cü ildə Bakı Avropa Liseyini bitirib. Hal-hazırda ADA Universitetinin "Kompyuter Elmləri” fakültəsində bakalavr təhsili alır (2014 - 2018). Maraq sahələri Web, Mobile, Competitive Programming.</li>
 						</ul>
@@ -68,7 +68,7 @@
 
 			<p>
 				<strong>Yardım</strong><br><br>
-				Əgər tapşırıqla bağlı nəsə aydın olmasa, sualınız olsa, həll etməyə çətinlik çəksəniz, chingiz.h@gmail.com və ya ziyaddinsadigov@gmail.com –a sualınızı yazıb göndərin.
+				Əgər tapşırıqla bağlı nəsə aydın olmasa, sualınız olsa, həll etməyə çətinlik çəksəniz, chingiz.h[at]gmail.com və ya ziyaddinsadigov[at]gmail.com –a sualınızı yazıb göndərin.
 		</div>
 		<div class="footer"></div>
 	</div>
